--- a/Frontend/Kotlin/MainProject/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/Kotlin/MainProject/app/src/main/res/layout/activity_main.xml
@@ -8,26 +8,6 @@
     android:layout_height="match_parent"
     tools:context=".MainPage">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/actvity_1"
-            android:textColor="@color/black"
-            android:textSize="26sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-             />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -35,7 +15,149 @@
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/nav_menu"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"/>
+        android:fitsSystemWindows="true"
+        />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="409dp"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="103dp" />
+
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="409dp"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            android:backgroundTintMode="add"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="171dp" />
+
+        <View
+            android:id="@+id/divider3"
+            android:layout_width="409dp"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            android:backgroundTintMode="add"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="252dp" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/divider2"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
+            app:layout_constraintVertical_bias="0.742"
+            app:srcCompat="@drawable/checker"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="229dp" />
+
+        <ImageButton
+            android:id="@+id/imageButton1"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/divider2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
+            app:layout_constraintVertical_bias="0.742"
+            app:srcCompat="@drawable/paper"
+            tools:ignore="MissingConstraints" />
+
+        <ImageButton
+            android:id="@+id/imageButton4"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/divider2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
+            app:layout_constraintVertical_bias="0.742"
+            app:srcCompat="@drawable/contact"
+            tools:ignore="MissingConstraints" />
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/divider2"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
+            app:layout_constraintVertical_bias="0.742"
+            app:srcCompat="@drawable/top"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="112dp" />
+
+        <ImageView
+            android:id="@+id/newlogo"
+            android:layout_width="258dp"
+            android:layout_height="87dp"
+            android:layout_marginStart="76dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="77dp"
+            android:layout_marginBottom="19dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageButton2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/logo"
+            tools:ignore="MissingConstraints" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="73dp"
+            android:layout_height="43dp"
+            android:text="All"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="186dp" />
+
+        <Space
+            android:layout_width="58dp"
+            android:layout_height="48dp"
+            tools:layout_editor_absoluteX="93dp"
+            tools:layout_editor_absoluteY="181dp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="73dp"
+            android:layout_height="43dp"
+            android:text="Real"
+            tools:layout_editor_absoluteX="151dp"
+            tools:layout_editor_absoluteY="186dp" />
+
+        <Space
+            android:layout_width="58dp"
+            android:layout_height="48dp"
+            tools:layout_editor_absoluteX="224dp"
+            tools:layout_editor_absoluteY="181dp" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="73dp"
+            android:layout_height="43dp"
+            android:text="Fake"
+            tools:layout_editor_absoluteX="282dp"
+            tools:layout_editor_absoluteY="186dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
 
 
