--- a/Frontend/Kotlin/MainProject/app/src/main/res/layout/activity_top_page.xml
+++ b/Frontend/Kotlin/MainProject/app/src/main/res/layout/activity_top_page.xml
@@ -1,24 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".TopPage">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/toolbar"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        android:layout_marginTop="0dp"-->
+<!--        android:background="@color/white">-->
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        android:background="#cccccc"/>
-</androidx.drawerlayout.widget.DrawerLayout>
+<!--            <RelativeLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:gravity="center_vertical">-->
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Project Z"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textSize="24sp"-->
+<!--                    android:textStyle="bold">-->
+<!--                </TextView>-->
+<!--            </RelativeLayout>-->
+<!--    </androidx.appcompat.widget.Toolbar>-->
+
+<!--        <com.google.android.material.tabs.TabLayout-->
+<!--            android:id="@+id/include"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            android:layout_below="@id/toolbar"-->
+<!--            android:layout_marginTop="0dp"-->
+<!--            android:background="white"-->
+<!--            android:backgroundTint="@color/white"-->
+<!--            app:tabIndicatorColor="@color/black"-->
+<!--            app:tabIndicatorHeight="3.5dp"-->
+<!--            app:tabMode="scrollable"-->
+<!--            app:tabSelectedTextColor="@color/black"-->
+<!--            app:tabTextColor="#618C8F">-->
+
+<!--            <com.google.android.material.tabs.TabItem-->
+<!--                android:id="@+id/top"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Top">-->
+<!--            </com.google.android.material.tabs.TabItem>-->
+
+<!--            <com.google.android.material.tabs.TabItem-->
+<!--                android:id="@+id/sorts"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Sports">-->
+<!--            </com.google.android.material.tabs.TabItem>-->
+
+<!--            <com.google.android.material.tabs.TabItem-->
+<!--                android:id="@+id/factc"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:text="fact c">-->
+<!--            </com.google.android.material.tabs.TabItem>-->
+
+<!--        </com.google.android.material.tabs.TabLayout>-->
+
+
+</RelativeLayout>
+
+
+    <!--    <com.google.android.material.navigation.NavigationView-->
+    <!--        android:id="@+id/nav_view"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        app:headerLayout="@layout/nav_header"-->
+    <!--        app:menu="@menu/nav_menu"-->
+    <!--        android:layout_gravity="start"-->
+    <!--        android:fitsSystemWindows="true"-->
+    <!--        android:background="#cccccc"/>-->
