forgotten backbtn added

--- a/Frontend/Kotlin/MainProject/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/Kotlin/MainProject/app/src/main/res/layout/activity_login.xml
@@ -222,4 +222,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/textbox"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+        tools:layout_editor_absoluteX="15dp"
+        tools:layout_editor_absoluteY="30dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
