--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_splash.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_splash.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="46dp"
         android:fontFamily="monospace"
-        android:text="Project Z"
+        android:text="@string/projectz"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
