--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -201,5 +201,64 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/enterwebsite" />
+
+        <EditText
+            android:id="@+id/editTextTextMultiLine2"
+            android:layout_width="363dp"
+            android:layout_height="94dp"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="29dp"
+            android:layout_marginEnd="31dp"
+            android:layout_marginBottom="2dp"
+            android:background="@drawable/rectangle"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="336dp"
+            android:layout_marginBottom="3dp"
+            android:text="Enter Article"
+            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="65dp"
+            android:layout_height="31dp"
+            android:layout_marginEnd="140dp"
+            android:text="Button"
+            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.153"
+            app:layout_constraintStart_toEndOf="@+id/enterwebsite" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="57dp"
+            android:layout_height="23dp"
+            android:layout_marginEnd="172dp"
+            android:text="Button"
+            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
+            app:layout_constraintVertical_bias="1.0" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
