--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -259,6 +259,20 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
             app:layout_constraintVertical_bias="1.0" />
 
+        <TextView
+            android:id="@+id/true_false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginEnd="102dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/true_false"
+            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
