--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width = "match_parent"
     android:layout_height="match_parent"
+    tools:context=".how_we_do_it"
     android:contentDescription="TODO">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -238,7 +239,7 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/urlcheck"
             android:layout_width="65dp"
             android:layout_height="31dp"
             android:layout_marginEnd="140dp"
@@ -270,7 +271,7 @@
             android:text="@string/true_false"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button"
+            app:layout_constraintStart_toEndOf="@+id/urlcheck"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 
