--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -25,7 +25,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.451"
             app:layout_constraintStart_toStartOf="parent"
-
             app:layout_constraintVertical_bias="0.864" />
 
         <TextView
@@ -39,37 +38,36 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="48dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="482dp"
+            android:id="@+id/newnews"
+            android:layout_width="32sp"
+            android:layout_height="32sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="492dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton8"
+            app:layout_constraintEnd_toStartOf="@+id/latestnews"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/checker"
-            />
+            app:srcCompat="@drawable/newsnews" />
 
         <ImageButton
-            android:id="@+id/imageButton8"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="483dp"
+            android:id="@+id/latestnews"
+            android:layout_width="32sp"
+            android:layout_height="32sp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginBottom="492dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton9"
-            app:srcCompat="@drawable/checker" />
+            app:layout_constraintEnd_toStartOf="@+id/factcheck"
+            app:srcCompat="@drawable/latestnews" />
 
         <ImageButton
-            android:id="@+id/imageButton9"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="483dp"
+            android:id="@+id/factcheck"
+            android:layout_width="32sp"
+            android:layout_height="32sp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginBottom="492dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
-            app:srcCompat="@drawable/paper" />
+            app:layout_constraintEnd_toStartOf="@+id/contact"
+            app:srcCompat="@drawable/factcheck" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -85,25 +83,26 @@
 
         <TextView
             android:id="@+id/project_z_logo2"
-            android:layout_width="114dp"
-            android:layout_height="56dp"
-            android:text="Project Z Logo"
-            android:textAlignment="center"
+            android:layout_width="109dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="16dp"
+            android:text="Project Zterling"
+            android:textAlignment="viewStart"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.528"
+            app:layout_constraintHorizontal_bias="0.626"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
+            android:id="@+id/contact"
+            android:layout_width="32sp"
+            android:layout_height="32sp"
             android:layout_marginEnd="48dp"
-            android:layout_marginBottom="484dp"
+            android:layout_marginBottom="492dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/btn_bar2"
-            app:srcCompat="@drawable/contact" />
+            app:srcCompat="@drawable/team" />
 
         <TextView
             android:id="@+id/textView3"
@@ -123,8 +122,8 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="363dp"
-            android:layout_height="252dp"
+            android:layout_width="362dp"
+            android:layout_height="172dp"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="139dp"
             android:background="@drawable/rectangle"
@@ -179,10 +178,9 @@
             android:layout_marginStart="14dp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="244dp"
-            android:layout_marginBottom="1dp"
             android:text="@string/enterwebsite"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -194,14 +192,17 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="31dp"
             android:layout_marginBottom="125dp"
-            android:background="@drawable/rectangle"
+            android:background="@drawable/textbox"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/enterwebsite" />
+            app:layout_constraintTop_toBottomOf="@+id/enterwebsite"
+            app:layout_constraintVertical_bias="0.0" />
+
 
         <EditText
             android:id="@+id/editTextTextMultiLine2"
@@ -211,16 +212,16 @@
             android:layout_marginTop="29dp"
             android:layout_marginEnd="31dp"
             android:layout_marginBottom="2dp"
-            android:background="@drawable/rectangle"
+            android:background="@drawable/textbox"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView5"
@@ -233,47 +234,37 @@
             android:text="Enter Article"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.0" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/urlcheck"
             android:layout_width="65dp"
             android:layout_height="31dp"
-            android:layout_marginEnd="140dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
+            android:layout_marginBottom="48dp"
+            android:background="@drawable/button1"
+            android:fontFamily="sans-serif"
+            android:text="Check"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.153"
-            app:layout_constraintStart_toEndOf="@+id/enterwebsite" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="57dp"
-            android:layout_height="23dp"
-            android:layout_marginEnd="172dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintHorizontal_bias="0.462"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/true_false"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="11dp"
-            android:layout_marginEnd="102dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="27dp"
+            android:layout_height="23dp"
+            android:layout_marginStart="178dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="206dp"
             android:text="@string/true_false"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/urlcheck"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/urlcheck"
+            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
