--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
@@ -7,6 +7,18 @@
     tools:context=".contact_us">
 
     <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.456"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.257" />
+
+    <TextView
         android:id="@+id/logo_bar"
         android:layout_width="412dp"
         android:layout_height="57dp"
