--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
@@ -113,7 +113,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_bar"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.187"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -121,12 +121,14 @@
         android:layout_width="115dp"
         android:layout_height="128dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="71dp"
         android:layout_marginEnd="136dp"
         android:layout_marginBottom="129dp"
         app:layout_constraintBottom_toTopOf="@+id/person2"
         app:layout_constraintEnd_toStartOf="@+id/person4"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_bar"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -134,22 +136,27 @@
         android:layout_width="115dp"
         android:layout_height="128dp"
         android:layout_marginTop="54dp"
-        android:layout_marginEnd="28dp"
         android:layout_marginBottom="129dp"
         app:layout_constraintBottom_toTopOf="@+id/person3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_bar"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/person3"
         android:layout_width="115dp"
         android:layout_height="128dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginTop="332dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="116dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.993"
+        app:layout_constraintStart_toEndOf="@+id/person2"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -157,13 +164,27 @@
         android:layout_width="115dp"
         android:layout_height="128dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginTop="328dp"
+        android:layout_marginBottom="116dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/person3"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_bar"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="159dp"
+        android:layout_height="27dp"
+        android:text="Meet The Team"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_bar"
+        app:layout_constraintVertical_bias="0.034" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
