--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
@@ -72,7 +72,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_bar"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/contact"
+        app:srcCompat="@drawable/team"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageButton
@@ -88,7 +88,7 @@
         app:layout_constraintStart_toStartOf="@+id/btn_bar"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/paper"
+        app:srcCompat="@drawable/latestnews"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageButton
@@ -104,7 +104,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btn_bar"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@drawable/checker"
+        app:srcCompat="@drawable/newsnews"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageButton
@@ -120,7 +120,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/checker"
+        app:srcCompat="@drawable/factcheck"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
