back button for the team #1 for nikesha

--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fake_news_background_image_"
-
     tools:context=".contact_us">
 
 
@@ -124,87 +123,67 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/person1"
-        android:layout_width="115dp"
-        android:layout_height="128dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="71dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="129dp"
+        android:id="@+id/person3"
+        android:layout_width="121dp"
+        android:layout_height="150dp"
+        android:background="@drawable/yasindu"
         android:foregroundGravity="center"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/person2"
-        app:layout_constraintEnd_toStartOf="@+id/person4"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/person"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_bar"
-        app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@drawable/pasath" />
+        app:layout_constraintTop_toBottomOf="@+id/person1" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/person"
-        android:layout_width="115dp"
-        android:layout_height="128dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="182dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginBottom="166dp"
+        android:layout_width="120dp"
+        android:layout_height="150dp"
+        android:background="@drawable/nikesha"
         android:foregroundGravity="center"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_bar"
-        app:layout_constraintVertical_bias="0.941"
-        tools:srcCompat="@drawable/nikesha" />
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/person3"
-        android:layout_width="115dp"
-        android:layout_height="128dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="44dp"
-        android:foregroundGravity="center"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/person2"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
-        app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@drawable/yasindu" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/person3"
+        app:layout_constraintTop_toBottomOf="@+id/person2" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/person2"
-        android:layout_width="115dp"
-        android:layout_height="128dp"
-        android:layout_marginBottom="44dp"
+        android:layout_width="109dp"
+        android:layout_height="135dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/manith"
         android:foregroundGravity="center"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/person4"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <ImageButton
+        android:id="@+id/person1"
+        android:layout_width="110dp"
+        android:layout_height="135dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/pasath"
+        android:foregroundGravity="center"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toStartOf="@+id/person4"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
-        app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@drawable/manith" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/person4"
-        android:layout_width="115dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="54dp"
-        android:layout_marginBottom="129dp"
+        android:layout_width="109dp"
+        android:layout_height="134dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/saicharan"
         android:foregroundGravity="center"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/person3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.945"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_bar"
-        app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@drawable/saicharan" />
+        app:layout_constraintEnd_toStartOf="@+id/person2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/person1"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView6"
