--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
@@ -14,6 +14,7 @@
         android:layout_width="412dp"
         android:layout_height="57dp"
         android:background="@drawable/rectangle"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
